@@ -1,0 +1,12 @@
+package org.testng;
+
+import com.google.inject.Binder;
+
+/**
+ * @author Bartosz Popiela
+ */
+public final class SampleModule implements IModule {
+    @Override
+    public void configure(Binder binder) {
+    }
+}
